# pdfmake

./: .gitignore  AGENTS.md  LICENSE  PDFCompress.py  PDFMake.py  PDFUnpack.py  README-ja.md  README.md  __pdfmake.py  main.py  pdfmake_.py  pyproject.toml  requirements.txt  run.py
Core/: FileManager.py  PDFDocument.py
Module/: OptionParser.py  PDFCompresser.py
command/: __init__.py  environment_check.py  optionparser.py
pdfmake/: __init__.py  __main__.py  cli.py
pdfmake/commands/: __init__.py  compress.py  make.py  unpack.py
pdfmake/core/: __init__.py  errors.py  file_manager.py  logger.py  option_parser.py
pdfmake/util/: __init__.py  natural_sort.py  regex_choice.py  remove_escape_sequences.py  style.py
pdfmake/util/parallax/: __init__.py  actor.py  multiline_printer.py  parallax_executor.py  parallax_printer.py  spinner.py
pdfmake/util/pdf/: __init__.py  compress_level.py  compressor.py  document.py
util/: __init__.py  filemanager.py  logger.py  regexchoice.py  remove_escape_sequences.py
util/parallax/: __init__.py  multiline_printer.py  parallax_executor.py  spinner.py
util/pdf/: __init__.py  pdfcompresser.py  pdfdocument.py
util/style/: style.py
